<resources>
    <string name="tfe_od_app_name" translation_description="Object Detection demo app [CHAR_LIMIT=40]">HND</string>
    <string name="tfe_od_camera_error" translation_description="Error regarding camera support[CHAR_LIMIT=40]">This device doesn\'t support Camera2 API.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login">Đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="email">Email</string>
    <string name="top_icon">haha</string>
    <string name="login_text">ĐĂNG NHẬP HỆ THỐNG</string>
    <string name="powered_by">Powered by</string>
    <string name="register_txt">ĐĂNG KÝ KHUÔN MẶT MỚI</string>
    <string name="recog_txt">ĐIỂM DANH HỌC VIÊN</string>
</resources>
