<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f6f9"
    tools:context=".ChooseOption">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/powered_by"
        android:textColor="#48466d"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <Button
        android:id="@+id/button"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/purple_outline_button"
        android:text="@string/register_txt"
        android:textColor="#48466d"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/purple_outline_button"
        android:text="@string/recog_txt"
        android:textColor="#48466d"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.82" />

    <ImageView
        android:id="@+id/imgDhhh"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/dhhh" />

    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/ic_wave__red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/ic_wave__blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="40dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toStartOf="@+id/imgDhhh"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/mlkit" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="40dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toEndOf="@+id/imgDhhh"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/tensorflow" />

</androidx.constraintlayout.widget.ConstraintLayout>